Format, update, and hopefully support 1.20.6